# pile-video

./: Dockerfile  LICENSE  Makefile  README.md  cmd.sh  flake.nix  generate_previews.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sweeper.py  tailwind.config.js  upd_schedule.py  youtube-dl-server.py
static/: download.js  gallery.js
static/css/: gallery-style.css  style.css
static/js/: gallery.js
static/logical_js/: logic.js
static/template/: gallery.tpl  index.tpl
template/: download.tpl  gallery.tpl
tools/: convert_mkv.sh  generate_previews.sh
