[tool.poetry]
name = "pile-video"
version = "0.5.0"
authors = ["Heinrich Hartmann <heinrich@heinrichhartmann.com>"]
description = ""

[tool.poetry.dependencies]
python = "^3.8"
APScheduler = "^3.6.3"
Flask-SocketIO = "^5.0.1"
sqlitedict = "^1.7.0"
yt-dlp = "^2022.4.8"
flask = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
